@@ -1,3 +1,6 @@
+2009-05-01
+	* mergeCodes() to merge the codings of two code, and add to popup menu of coding Tab.
+	
 2009-04-27
 	* Bugfixes of HL_Case() and delete arributes button.
 	* Bugfixes: when delete a file, delete related coding, caselinkage and treefile accordingly.
